# comfyui-model-dynamic-loader

./: README.md  __init__.py  pyproject.toml
nodes/: AudioSave.py  LoadCheckpointFromCivitAI.py  LoadEmbedding.py  LoadHunyuanLoraFromCivitAI.py  LoadHunyuanLoraFromHF.py  LoadImageFromURL.py  LoadLoraFromCivitAI.py  LoadLoraFromComfyOnline.py  LoadLoraFromHF.py  TextSave.py  cai_utils.py  clearRAM.py  comfyonline_utils.py  nodes.py  save_file.py  upload_anything.py
web/: uploadAnything.js
